Work in progress on MasterPage. End of session 30-11-2016

--- a/Agile16_Komis/src/style/Style.css
+++ b/Agile16_Komis/src/style/Style.css
@@ -1,8 +1,9 @@
-﻿body {
+﻿#categories{
+    color:red; 
 }
 
-#categories{
-    color:red; 
+p{
+    background-color:blue;
 }
 
 #menu{
@@ -12,7 +13,9 @@
     color:red;
 }
 
-#header{
+#AddressBar{
+    background-color:gray;
     align-items:center;
     width: 50%;
 }
+
