--- a/Agile16_Komis/src/wwwroot/ShopMaster.Master
+++ b/Agile16_Komis/src/wwwroot/ShopMaster.Master
@@ -3,6 +3,7 @@
 <!DOCTYPE html>
 
   <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+  <link rel="stylesheet" type="text/css" href="~/src/style/Style.css">
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <script>
@@ -37,6 +38,7 @@
   } );
   </script>
 <html>
+
 <head runat="server">
     <title>Komis internetowy "Płacz, płać, jedź i popłacz jeszcze trochę"</title>
     <link rel="stylesheet" type="text/css" href="~/src/style/Style.css">
@@ -45,6 +47,7 @@
     </asp:ContentPlaceHolder>
 </head>
 <body>
+    <div class="page-wrapper">
     <form id="shop" runat="server">
         <div id="title" class="title">
             <h2>Komis internetowy "Płacz, płać, jedź i popłacz jeszcze trochę"</h2>
@@ -69,5 +72,7 @@
         </asp:ContentPlaceHolder>
     </div>
     </form>
+    </div>
+
 </body>
 </html>
